chore: add option to select authentik version for ci bootstrap

--- a/ci/integration_tests/docker-compose.yml
+++ b/ci/integration_tests/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - redis:/data
   server:
-    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2025.2.1}
+    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG?authentik tag required}
     restart: unless-stopped
     command: server
     environment:
@@ -56,7 +56,7 @@ services:
       redis:
         condition: service_healthy
   worker:
-    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2025.2.1}
+    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG?authentik tag required}
     restart: unless-stopped
     command: worker
     environment:
