--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: CI
 
 on:
   push:
@@ -21,14 +18,17 @@ jobs:
       with:
         go-version: '1.23'
 
-    - name: Build
+    - name: Run build
       run: go build -o bin/ak .
 
-    - name: Test
+    - name: Run unit tests
       run: go test -v ./...
 
-    - name: Create Local Target
+    - name: Create e2e env
       run: ./ci/integration_tests/ak_bootstrap.sh create
 
     - name: Run e2e tests
       run: ./ci/integration_tests/ak_run_e2e.sh
+
+    - name: Cleanup e2e env
+      run: ./ci/integration_tests/ak_bootstrap.sh destroy
