--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
+  e2e:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -18,17 +17,14 @@ jobs:
       with:
         go-version: '1.23'
 
-    - name: Run build
-      run: go build -o bin/ak .
-
     - name: Run unit tests
       run: go test -v ./...
 
     - name: Create e2e env
       run: ./ci/integration_tests/ak_bootstrap.sh create
+      env:
+        AK_BOOTSTRAP_CI: "true"
+        AK_BOOTSTRAP_WAIT: "60"
 
     - name: Run e2e tests
-      run: ./ci/integration_tests/ak_run_e2e.sh
-
-    - name: Cleanup e2e env
-      run: ./ci/integration_tests/ak_bootstrap.sh destroy
+      run: AK_BOOSTRAP_CI=true ./ci/integration_tests/ak_run_e2e.sh
