chore: update e2e tests to show clearly which case failed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,6 @@ jobs:
 
     - name: Run e2e tests
       run: AK_BOOSTRAP_CI=true ./ci/integration_tests/ak_run_e2e.sh
+
+    - name: Destroy e2e env
+      run: ./ci/integration_tests/ak_bootstrap.sh destroy
