--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -7,9 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
+  scan-gitleaks:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          
+      - uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   lint-golangci:
-    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
