--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -18,21 +18,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  lint-golangci:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-go@v5
-        with:
-          go-version: stable
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8
-        with:
-          version: v2.1
-
-  test-unittest:
+  test-ci:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -42,8 +28,8 @@ jobs:
       with:
         go-version-file: "go.mod"
 
-    - name: Run unit tests
-      run: go test -v -coverprofile=coverage.out -covermode=atomic ./...
+    - name: Run ci tests
+      run: make ci
 
   test-integrationtest:
     runs-on: ubuntu-latest
@@ -55,14 +41,8 @@ jobs:
       with:
         go-version-file: "go.mod"
 
-    - name: Create e2e env
-      run: ./ci/integration_tests/ak_bootstrap.sh create
-      env:
-        AK_BOOTSTRAP_CI: "true"
-        AK_BOOTSTRAP_WAIT: "90"
-
     - name: Run e2e tests
-      run: ./ci/integration_tests/ak_run_e2e.sh
+      run: make e2e-ci
 
-    - name: Destroy e2e env
-      run: ./ci/integration_tests/ak_bootstrap.sh destroy
+    - name: Cleanup e2e env
+      run: make e2e-cleanup
