--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -31,7 +31,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: semgrep ci --sarif > semgrep.sarif
+      - name: Run Semgrep
+        run: |
+          semgrep scan \
+            --config=p/ci \
+            --sarif --output=semgrep.sarif
 
       - name: Upload SARIF file for GitHub Advanced Security Dashboard
         uses: github/codeql-action/upload-sarif@v3
